# KONUS-HMM

./: .gitignore  flake.nix  pyproject.toml
.direnv/: flake-profile-1-link
data/: error-scraping.txt  get_solar_event_data.py  get_solar_events.py  solar_events_metadata.csv
data/1994/: 1.txt  event_metadata.csv
data/1995/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  event_metadata.csv
data/1996/: 11.txt  12.txt  event_metadata.csv
data/1997/: 13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  event_metadata.csv
data/1998/: 30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt  50.txt  51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  59.txt  60.txt  61.txt  62.txt  63.txt  64.txt  65.txt  66.txt  67.txt  68.txt  69.txt  (+23 more)
data/1999/: 100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  137.txt  138.txt  139.txt  (+43 more)
data/2000/: 178.txt  179.txt  180.txt  181.txt  182.txt  183.txt  185.txt  186.txt  187.txt  188.txt  189.txt  190.txt  191.txt  192.txt  193.txt  194.txt  195.txt  196.txt  197.txt  198.txt  199.txt  200.txt  201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  209.txt  210.txt  211.txt  212.txt  213.txt  214.txt  (+69 more)
notebooks/: 001_testing_around.ipynb  002_normalization.ipynb
utils/: __init__.py  constants.py  dtypes.py  hmm.py  load.py  normalizer.py  rootdir.py
(+897 files in other folders)
